<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ro.moa.financial.consultant.DetailSalaryFragment">
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            tools:context="ro.moa.financial.consultant.SalaryFragment"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:id="@+id/linearLayout"
            android:focusable="true">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailsWelcome"
                android:id="@+id/textView5"
                android:autoText="false"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:background="#ffff4961"
                android:elegantTextHeight="true"
                android:linksClickable="false"
                android:minLines="3"
                android:textAlignment="center"
                android:textStyle="bold"
                android:focusable="true"/>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/salary_gross_description"
                        android:layout_weight="2"/>

                    <EditText
                        android:id="@+id/grossSalaryResults"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:minWidth="60dp"
                        android:layout_weight="2"
                        android:text="0"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageGrossSalaryDetail"
                        android:src="@android:drawable/ic_menu_info_details"
                        android:layout_gravity="right"
                        android:layout_weight="0"
                        android:contentDescription="@string/info"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/CASSView"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/CASS_description"
                        android:layout_weight="2"/>

                    <EditText
                        android:id="@+id/CASSAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:minWidth="60dp"
                        android:layout_weight="2"
                        android:text="0"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageHealthCareSalaryDetail"
                        android:src="@android:drawable/ic_menu_info_details"
                        android:layout_gravity="right"
                        android:layout_weight="0"
                        android:contentDescription="@string/info"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/CASView"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/CAS_description"
                        android:layout_weight="2"/>

                    <EditText
                        android:id="@+id/CASAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:minWidth="60dp"
                        android:layout_weight="2"
                        android:text="0"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imagePensionSalaryDetail"
                        android:src="@android:drawable/ic_menu_info_details"
                        android:layout_gravity="right"
                        android:layout_weight="0"
                        android:contentDescription="@string/info"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/UnemploymentView"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/unemploymentDescription"
                        android:layout_weight="2"/>

                    <EditText
                        android:id="@+id/UnemploymentAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:minWidth="60dp"
                        android:layout_weight="2"
                        android:text="0"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageUnemploymentSalaryDetail"
                        android:src="@android:drawable/ic_menu_info_details"
                        android:layout_gravity="right"
                        android:layout_weight="0"
                        android:contentDescription="@string/info"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tax Deductible"
                        android:id="@+id/textView9"
                        android:singleLine="false"
                        android:layout_weight="2"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/taxDeductibleAmount"
                        android:layout_weight="2"
                        android:text="0"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageTaxDeductibleSalaryDetail"
                        android:contentDescription="@string/info"
                        android:src="@android:drawable/ic_menu_info_details"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Taxes"
                        android:id="@+id/textView8"
                        android:password="false"
                        android:layout_weight="2"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/taxesAmountSalary"
                        android:layout_weight="2"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageTaxesSalaryDetail"
                        android:contentDescription="@string/info"
                        android:src="@android:drawable/ic_menu_info_details"
                        android:adjustViewBounds="false"
                        android:layout_gravity="right"
                        android:layout_weight="0"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/salary_net_description"
                        android:layout_weight="2"/>

                    <EditText
                        android:id="@+id/netSalaryResults"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:layout_weight="2"
                        android:minWidth="60dp"
                        android:text="0"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageNetSalaryDetail"
                        android:src="@android:drawable/ic_menu_info_details"
                        android:contentDescription="@string/info"
                        android:layout_gravity="right"
                        android:layout_weight="0"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Lunch Tickets Amount"
                        android:id="@+id/textView10"
                        android:layout_weight="2"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/lunchAmount"
                        android:layout_column="1"
                        android:layout_weight="2"
                        android:text="0"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageLunchSalaryDetail"
                        android:contentDescription="@string/info"
                        android:src="@android:drawable/ic_menu_info_details"
                        />
                </TableRow>

            </TableLayout>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change Salary"
                android:id="@+id/Change"
                android:layout_gravity="center"
                />
        </LinearLayout>

    </FrameLayout>
</ScrollView>